unpackaged/main/default/objects/Reservation__c/fields/Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Check_Out__c</fullName>
    <label>Check Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>