unpackaged/main/default/objects/Reservation__c/fields/Check_OUT_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_OUT_Date__c</fullName>
    <label>Check OUT Date</label>
    <type>Date</type>
</CustomField>