unpackaged/main/default/objects/Reservation__c/fields/Date_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Booking__c</fullName>
    <label>Date of Booking</label>
    <type>DateTime</type>
</CustomField>