unpackaged/main/default/objects/Reservation__c/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <label>ID Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>