unpackaged/main/default/objects/Reservation__c/fields/ID_Type__c.field-meta.xml
<CustomField>
    <fullName>ID_Type__c</fullName>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aadhaar Card</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>PAN Card</fullName>
            </value>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Voter ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>