unpackaged/main/default/objects/Reservation__c/fields/Number_of_Adults__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Adults__c</fullName>
    <label>Number of Adults</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>