unpackaged/main/default/objects/Reservation__c/fields/Reservation_ID__c.field-meta.xml
<CustomField>
    <fullName>Reservation_ID__c</fullName>
    <displayFormat>REV-{0000}</displayFormat>
    <label>Reservation ID</label>
    <type>AutoNumber</type>
</CustomField>