unpackaged/main/default/objects/Reservation__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Room__c.Hotel__c</field>
            <operation>equals</operation>
            <valueField>$Source.Hotel__c</valueField>
        </filterItems>
        <filterItems>
            <field>Room__c.Room_Booked__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>