unpackaged/main/default/objects/Reservation__c/fields/Total_Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Days__c</fullName>
    <label>Total Number of Days.</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>