unpackaged/main/default/objects/Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Reservation_ID__c</columns>
    <columns>Customer__c</columns>
    <columns>Email_ID__c</columns>
    <columns>ID_Type__c</columns>
    <columns>ID_Number__c</columns>
    <columns>Hotel__c</columns>
    <columns>Room__c</columns>
    <columns>Check_IN_Date__c</columns>
    <columns>Check_OUT_Date__c</columns>
    <columns>Total_Number_of_Days__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>